# linalg

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN_DOC.md  INSTALL.md  LICENSE  README.md  TODO.md  main.py  pyproject.toml  run_tests.py
examples/: piping_examples.py  simple_examples.py
linalg/: __init__.py  __main__.py  cli.py  evaluator.py  formatter.py  loader.py  main.py  parser.py  prompt.py
tests/: test_basic.py  test_binary_piping.py  test_cli.py  test_formats.py  test_piping.py  test_prompt.py
